# ddns-cloudflare

./: .dockerignore  Cargo.toml  Dockerfile  README.md  ddns.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cloudflare.rs  ip.rs  log.rs  main.rs
