[package]
name = "ddns-cloudflare"
version = "0.0.0"
authors = ["Patrick Koenig <pkoenig10@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
hickory-client = "0.25.2"
log = { version = "0.4.29", features = ["std"] }
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros"] }
url = "2.5.8"
