[package]
name = "ddns-cloudflare"
version = "0.0.0"
authors = ["Patrick Koenig <pkoenig10@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
hickory-client = "0.25.2"
jiff = "0.2.24"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros"] }
url = "2.5.8"
